# src/infra/http/routes/expenses/index.ts
@@ -7,6 +7,7 @@ import {
 } from "../../middlewares";
 import { deleteExpenseHandler } from "./delete-expense";
 import { ExpenseUseCaseFactory } from "./ExpenseUseCaseFactory";
+import { getExpensesHandler } from "./get-expenses";
 import { createExpenseHandler } from "./post-expense";
 import { updateExpenseHandler } from "./put-expense";
 import { createSchema, updateSchema } from "./schemas";
@@ -16,13 +17,13 @@ export const expensesRouter = Router();
 const createExpense = ExpenseUseCaseFactory.createExpense();
 const updateExpense = ExpenseUseCaseFactory.updateExpense();
 const removeExpense = ExpenseUseCaseFactory.removeExpense();
+const getExpenses = ExpenseUseCaseFactory.getExpenses();
 
-expensesRouter.post(
-  "/expenses",
-  ensureAuthenticated,
-  ensureSchema(createSchema),
-  createExpenseHandler(createExpense),
-);
+expensesRouter
+  .route("/expenses")
+  .all(ensureAuthenticated)
+  .post(ensureSchema(createSchema), createExpenseHandler(createExpense))
+  .get(getExpensesHandler(getExpenses));
 
 expensesRouter
   .route("/expenses/:id")
